--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,39 +1,28 @@
 {
-  "name": "react",
+  "name": "frontend",
   "version": "1.0.0",
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "keywords": [],
-  "main": "src/index.tsx",
-  "dependencies": {
-    "axios": "1.7.2",
-    "leaflet": "^1.9.4",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-leaflet": "^4.2.1",
-    "react-leaflet-markercluster": "3.0.0-rc1",
-    "react-router-dom": "6.23.1",
-    "react-scripts": "^5.0.0",
-    "src": "1.1.2"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.18.0",
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.15",
-    "loader-utils": "3.2.1",
-    "typescript": "4.4.4"
-  },
+  "description": "frontend part of the project",
+  "main": "index.js",
+  "devDependencies": {},
   "scripts": {
     "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
